--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
-    "@getbrevo/brevo": "^2.0.0-beta.4",
+    "@getbrevo/brevo": "^3.0.1",
     "@next/third-parties": "^14.2.4",
     "@portabletext/react": "^3.0.11",
     "@reduxjs/toolkit": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.24.1",
+    "@sanity/vision": "^4.10.2",
     "@sendinblue/client": "^3.3.1",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -27,7 +27,7 @@
     "next": "^14.2.4",
     "next-auth": "^4.24.5",
     "next-auth-sanity": "^1.5.3",
-    "next-sanity": "^7.0.10",
+    "next-sanity": "^11.4.2",
     "path": "^0.12.7",
     "react": "^18",
     "react-awesome-reveal": "^4.2.7",
