--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth-sanity": "^1.5.3",
     "next-sanity": "^11.4.2",
     "path": "^0.12.7",
+    "pdfmake": "^0.2.20",
     "react": "^18",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
